--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ test {
     useJUnitPlatform()
 }
 
-String dockerHubUsernameProperty = findProperty('dockerHubUsername') ?: 'http://kind-registry:5000'
+String dockerHubUsernameProperty = findProperty('dockerHubUsername') ?: 'kind-registry:5000'
 String imageName = "${dockerHubUsernameProperty}/spring-boot-api-example:$version"
 
 docker {
